@@ -5,7 +5,6 @@ MILESTONES
 HIGH PRIORITY
 - if concentration graph has only 3 bars, center them in the chart
 - redo battery image file, it's being scaled up
-- use molecule color for "negligible" in Concentration Graph
 - try to make symbols in reaction equations line up with bars in concentration graph
 - light rays in conductivity tester
 - handle probe locations better in conductivity tester
